# app/Http/Requests/UpdateAdminSystemRequest.php
@@ -17,11 +17,18 @@ class UpdateAdminSystemRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'nom' => ['required', 'max:30', "alpha",'min:2'],
-            'prenom' => ['required', 'regex:/^[a-zA-Z][a-zA-Z -]{2,100}$/'],
-            'email' => ['nullable', 'regex:/^[A-Za-z]+[A-Za-z0-9\._%+-]+@+[A-Za-z][A-Za-z0-9\.-]+\.[A-Za-z]{2,}$/', 'max:255', 'unique:admin_systems,email'],
-            'image' => ['sometimes','image'],
-            'password' => ['sometimes',PasswordRule::min(8)->mixedCase()->numbers()->symbols(), 'confirmed'],
+            'nom' => ['nullable', 'max:30', "alpha", 'min:2'],
+            'prenom' => ['nullable', 'regex:/^[a-zA-Z][a-zA-Z -]{2,100}$/'],
+            'email' => [
+                'nullable', 'regex:/^[A-Za-z]+[A-Za-z0-9\._%+-]+@+[A-Za-z][A-Za-z0-9\.-]+\.[A-Za-z]{2,}$/',
+                'max:255', 'unique:admin_systems,email'
+            ],
+            'telephone' => [
+                'nullable', 'regex:/^(77|78|76|70|75|33)[0-9]{7}$/',
+                'unique:users,telephone', 'unique:admin_systems,telephone'
+            ],
+            'image' => ['sometimes', 'image'],
+            'password' => ['sometimes', PasswordRule::min(8)->mixedCase()->numbers()->symbols(), 'confirmed'],
         ];
     }
 
@@ -30,6 +37,6 @@ class UpdateAdminSystemRequest extends FormRequest
         throw new HttpResponseException(response()->json([
             'success' => false,
             'errors' => $validator->errors()
-        ],422));
+        ], 422));
     }
 }
