# app/Http/Requests/UpdateUserRequest.php
@@ -18,10 +18,11 @@ class UpdateUserRequest extends FormRequest
     public function rules()
     {
         return [
-            'nom' => ['required', 'alpha', 'max:30', 'min:3'],
-            'prenom' => ['required', 'regex:/^[a-zA-Z][a-zA-Z -]{2,100}$/'],
-            'adresse' => ['required', 'string', 'max:100'],
-            'telephone' => ['nullable', 'regex:/^(77|78|76|70|75|33)[0-9]{7}$/', 'unique:users,telephone'],
+            'nom' => ['nullable', 'alpha', 'max:30', 'min:3'],
+            'prenom' => ['nullable', 'regex:/^[a-zA-Z][a-zA-Z -]{2,100}$/'],
+            'adresse' => ['nullable', 'string', 'max:100'],
+            'telephone' => ['nullable', 'regex:/^(77|78|76|70|75|33)[0-9]{7}$/',
+             'unique:users,telephone','unique:admin_systems,telephone'],
             'image' => ['sometimes', "image"],
             'email' => ['nullable', 'regex:/^[A-Za-z]+[A-Za-z0-9\._%+-]+@+[A-Za-z][A-Za-z0-9\.-]+\.[A-Za-z]{2,}$/', 'unique:users,email', 'unique:admin_systems,email'],
             'password' => [
